<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout List</string>
    <string name="action_settings">Settings</string>

    <string name="add_workout">Add Workout</string>
    <string name="name">name</string>
    <string name="exercise1">exercise1</string>
    <string name="exercise2">exercise2</string>
    <string name="exercise3">exercise3</string>
    <string name="exercise4">exercise4</string>
    <string name="description">description</string>

    <string name="workouts_title">Workouts</string>
    <string name="add_button">ADD</string>

    <string name="save_data">Save</string>

    <string name="edit_workout_title">Edit Workout</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>

</resources>